# wpa_supplicant-windows

./: CMakeLists.txt  README.md  build_openssl_msvc2005.bat  build_wpa_supplicant.bat  build_wpa_supplicant_pipe.bat  build_wpa_supplicant_standalone.bat  build_wpa_supplicant_udp.bat
openssl-1.1.1-x86/include/openssl/: opensslconf.h
openssl-1.1.1-x86/lib/: libssl.lib
openssl-1.1.1q/Configurations/: 10-main.conf
openssl-1.1.1q/crypto/bio/: b_addr.c
openssl-1.1.1q/crypto/rand/: rand_win.c
openssl-1.1.1t/: e_os.h
openssl-1.1.1t/Configurations/: 10-main.conf
openssl-1.1.1w/crypto/rand/: rand_win.c
patches/openssl/: 0001-Add-Windows-98-compatibility.patch
patches/wpa_supplicant/: 0001-Enable-TLSv1.0-by-default.patch  0002-AP-guard-FT-SAE-code-with-CONFIG_IEEE80211R_AP.patch  0003-Allow-legacy-renegotiation-to-fix-PEAP-issues-with-s.patch  0004-Win98-VS2005-port.patch  0004-Windows-VS2005-port-part-1.patch  0005-Add-experimental-standalone-mode.patch  0005-Windows-VS2005-port-part-2.patch  0006-Improve-Windows-98-compatibility.patch  0007-Add-experimental-standalone-mode.patch  0008-Add-new-status-icons.patch  0008-Win98-VS2005-port.patch  0009-Add-experimental-standalone-mode.patch  0009-Fix-Windows-98-compatibility.patch  0010-Windows-VS2005-port-part-3.patch  0011-Fix-Windows-logging.patch
wpa_supplicant-2.10/src/ap/: wpa_auth_ie.c
wpa_supplicant-2.10/src/common/: sae_pk.c  wpa_ctrl.c
wpa_supplicant-2.10/src/crypto/: tls_openssl.c
wpa_supplicant-2.10/src/drivers/: driver_ndis.c  ndis_events.c
wpa_supplicant-2.10/src/l2_packet/: l2_packet_winpcap.c
wpa_supplicant-2.10/src/pae/: ieee802_1x_kay.c
wpa_supplicant-2.10/src/utils/: base64.c  build_config.h  common.h  edit_simple.c  eloop.c  includes.h  inet_ntop.h  inet_pton.h  pcsc_funcs.c  trace.h  wpa_debug.c  wpa_debug.h
wpa_supplicant-2.10/wpa_supplicant/: ap.c  autoscan_exponential.c  autoscan_periodic.c  bgscan_learn.c  bgscan_simple.c  config.c  ctrl_iface.c  ctrl_iface_named_pipe.c  eapol_test.c  main_winsvc.c  nmake.mak  win_if_list.c  wnm_sta.c  wpa_cli.c  wpa_supplicant.c
wpa_supplicant-2.10/wpa_supplicant/vs2005/eapol_test/: eapol_test.vcproj
wpa_supplicant-2.10/wpa_supplicant/vs2005/win_if_list/: win_if_list.vcproj
wpa_supplicant-2.10/wpa_supplicant/vs2005/wpa_cli/: wpa_cli.vcproj
wpa_supplicant-2.10/wpa_supplicant/vs2005/wpa_passphrase/: wpa_passphrase.vcproj
wpa_supplicant-2.10/wpa_supplicant/vs2005/wpa_supplicant/: wpa_supplicant.vcproj
wpa_supplicant-2.10/wpa_supplicant/vs2005/wpasvc/: wpasvc.vcproj
wpa_supplicant-2.10/wpa_supplicant/wpa_gui-qt4/: addinterface.cpp  icons_png.qrc  icons_status.qrc  main.cpp  networkconfig.cpp  peers.cpp  scanresults.cpp  standalone.cpp  standalone.h  wpa_gui.pro  wpa_gui.rc  wpagui.cpp  wpagui.h
